pass feature: create a topic

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,7 +1,1 @@
-<h1>Topics:</h1>
-
-<% @topics.each do |topic| %>
-  <p><%= topic.name %></p>
-<% end %>
-
-<%= render 'form' %>
+<%= render 'topics' %>
