pass unit: GET /topics/1/edit routes to topics#edit and sets id

--- a/app/views/topics/_topics.html.erb
+++ b/app/views/topics/_topics.html.erb
@@ -1,5 +1,5 @@
 <h1>Topics:</h1>
 
 <% @topics.each do |topic| %>
-  <h2><%= topic.name %></h2>
+  <h2><%= link_to topic.name, topic %></h2>
 <% end %>
