--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,5 +1,5 @@
 <%= render 'topics' %>
 
-<h1><%= @topic.name %></h1>
+<h1><%= @topic.name %> Resources:</h1>
 
-<%#= render "resources/resources" %>
+<%#= render 'resources/resources' %>
