pass unit: GET edit renders the edit template

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,5 +1,6 @@
 <%= render 'topics' %>
 
-<h1><%= @topic.name %> Resources:</h1>
+<h1><%= @topic.name %> Resources:</h1><%#= button_to 'Edit Topic', edit_topic_path(@topic) %><%#= button_to 'Delete Topic', topic_path(@topic), method: :delete, data: { confirm: 'Are you sure?' } %>
+
 
 <%#= render 'resources/resources' %>
