--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,5 +1,3 @@
-<!-- <h1>Edit Topic</h1> -->
+<h1>Edit Topic</h1>
 
-<%#= render 'form' %>
-
-<%#= button_to 'Delete Topic', topic_path(@topic), method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= render 'form' %>
