--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'topics' %>
 
-<h1><%= @topic.name %> Resources:</h1><%= button_to 'Edit Topic', edit_topic_path(@topic) %><%= button_to 'Delete Topic', topic_path(@topic), method: :delete, data: { confirm: 'Are you sure?' } %>
+<h1><%= @topic.name %> Resources:</h1><%= link_to 'Edit Topic', edit_topic_path(@topic.id) %><%= button_to 'Delete Topic', topic_path(@topic), method: :delete, data: { confirm: 'Are you sure?' } %>
 
 
 <%#= render 'resources/resources' %>
