--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -1,5 +1,28 @@
-<h1>Resources:</h1>
+<h1>Listing <%= @topic.name %>-related Resources:</h1>
 
-<%# @resources.each do |resource| %>
-  <h2><%#= resource.name %></h2>
-<% end %>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @topic.resources.each do |resource| %>
+      <tr>
+        <div>
+          <td><%= resource.name %></td>
+          <td><%= resource.url %></td>
+          <td><%#= link_to 'Show', resource %></td>
+          <td><%#= link_to 'Edit', edit_resource_path(resource) %></td>
+          <td><%#= link_to 'Delete', resource, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </div>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%#= link_to 'New Resource', new_topic_resource_path %>
