--- a/app/views/topics/_topics.html.erb
+++ b/app/views/topics/_topics.html.erb
@@ -1,7 +1,28 @@
-<h1>Topics:</h1>
+<h1>Listing Topics</h1>
 
-<%= link_to 'Add New Topic', new_topic_path %>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<% @topics.each do |topic| %>
-  <h2><%= link_to topic.name, topic %></h2>
-<% end %>
+  <tbody>
+    <% @topics.each do |topic| %>
+      <tr>
+        <p>
+          <td><%= topic.name %></td>
+          <td><%= link_to 'Show', topic %></td>
+          <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
+          <td><%= link_to 'Delete', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%#= link_to 'Delete', topic, method: :delete, data: { confirm: "#{pluralize(topic.resources.count, 'resource')} will also be deleted. Are you sure?" } %></td>
+        </p>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Topic', new_topic_path %>
