--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,3 +1,6 @@
-<h1>Edit Topic</h1>
+<h1>Editing Topic</h1>
 
 <%= render 'form' %>
+
+<%= link_to 'Show', @topic %> |
+<%= link_to 'Back', topics_path %>
