--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -12,9 +12,7 @@
     <% @topic.resources.each do |resource| %>
       <tr>
         <div>
-          <td><%= resource.name %></td>
-          <td><%= resource.url %></td>
-          <td><%#= link_to 'Show', resource %></td>
+          <td><%= link_to resource.name, "#{resource.url}" %></td>
           <td><%#= link_to 'Edit', edit_resource_path(resource) %></td>
           <td><%#= link_to 'Delete', resource, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </div>
@@ -25,4 +23,4 @@
 
 <br>
 
-<%#= link_to 'New Resource', new_topic_resource_path %>
+<%= link_to 'New Resource', new_topic_resource_path(@topic) %>
