pass feature: update a resource

--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -13,7 +13,7 @@
       <tr>
         <div>
           <td><%= link_to resource.name, "#{resource.url}" %></td>
-          <td><%#= link_to 'Edit', edit_resource_path(resource) %></td>
+          <td><%#= link_to 'Edit', edit_resource_path(resource.resource_id) %></td>
           <td><%#= link_to 'Delete', resource, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </div>
       </tr>
