pass feature: delete a resource

--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,6 +1,6 @@
 <%= render '/topics/topics' %>
 
-<%= render 'resources' %>
+<%#= render 'resources' %>
 
 <h1>New <%= @topic.name %>-related Resource:</h1>
 
