pass (forgotten) unit: DELETE destroy resource redirects to the parent topic

--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,5 +1,6 @@
 <%= render '/topics/topics' %>
 
+<!-- <p>not sure why this won't work</p> -->
 <%#= render 'resources' %>
 
 <h1>New <%= @topic.name %>-related Resource:</h1>
