--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,6 +1,6 @@
 <%= render '/topics/topics' %>
 
-<!-- <p>not sure why this won't work</p> -->
+<!-- not sure why this won't work -->
 <%#= render 'resources' %>
 
 <h1>New <%= @topic.name %>-related Resource:</h1>
