--- a/app/views/topics/_topics.html.erb
+++ b/app/views/topics/_topics.html.erb
@@ -1,14 +1,52 @@
-<h1>Listing Topics:</h1>
+<!-- <h1>Listing Topics:</h1> -->
 
-<% @topics.each do |topic| %>
-  <ul>
+<%# @topics.each do |topic| %>
+  <!-- <ul> -->
   <!-- h2 for testing purposes only -->
-    <li><h2></h2>
-      <%= link_to topic.name, topic %>
-      <%= link_to 'Edit', edit_topic_path(topic) %>
-      <%= link_to 'Delete Topic', topic, method: :delete, data: { confirm: "#{pluralize(topic.resources.count, 'resource')} will also be deleted. Are you sure?" } %>
-    </li>
-  </ul>
-<% end %>
+    <!-- <li><h2></h2> -->
+      <%#= link_to topic.name, topic %>
+      <%#= link_to 'Edit', edit_topic_path(topic) %>
+      <%#= link_to 'Delete Topic', topic, method: :delete, data: { confirm: "#{pluralize(topic.resources.count, 'resource')} will also be deleted. Are you sure?" } %>
+    <!-- </li> -->
+  <!-- </ul> -->
+<%# end %>
 
-<%= link_to 'New Topic', new_topic_path %>
+<%#= link_to 'New Topic', new_topic_path %>
+
+<div class="container">
+  <div class="row">
+        <h2>save links to programming resources for futureference</h2>
+        <hr>
+        <div class="dropdown">
+            <a id="dLabel" role="button" data-toggle="dropdown" class="btn btn-primary" data-target="#" href="/page.html">
+                Topics <span class="caret"></span>
+            </a>
+        <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+            <% @topics.each do |topic| %>
+              <li><a href="#"><%= link_to topic.name, topic %></a></li>
+            <% end %>
+              <li class="divider"></li>
+              <li class="dropdown-submenu">
+                <a tabindex="-1" href="#">Hover me for more options</a>
+                <ul class="dropdown-menu">
+                  <li><a tabindex="-1" href="#">Second level</a></li>
+                  <li class="dropdown-submenu">
+                    <a href="#">Even More..</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">3rd level</a></li>
+                      <li><a href="#">3rd level</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Second level</a></li>
+                  <li><a href="#">Second level</a></li>
+                </ul>
+              </li>
+            </ul>
+        </div>
+  </div>
+</div>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
