--- a/app/views/resources/_resources2.html.erb
+++ b/app/views/resources/_resources2.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-8">
-    <h3><strong><%= @topic.name %> Links </strong></h3>
+    <h3 class="banana"><strong><%= @topic.name %> Links </strong></h3>
   </div>
   <div class="col-sm-4">
     <div class="btn-group" role="group" aria-label="...">
