--- a/app/views/resources/_resources2.html.erb
+++ b/app/views/resources/_resources2.html.erb
@@ -4,6 +4,7 @@
   </div>
   <div class="col-sm-4">
     <div class="btn-group" role="group" aria-label="...">
+      <%= link_to 'New', new_topic_path, method: :get, class: 'btn btn-default' %>
       <%= link_to 'Edit', edit_topic_path(@topic), method: :get, class: 'btn btn-default' %>
       <%= link_to 'Delete', @topic, method: :delete, data: { confirm: "#{pluralize(@topic.resources.count, 'link')} will also be deleted. Are you sure?" }, class: 'btn btn-default' %>
     </div>
@@ -17,6 +18,7 @@
       </div>
       <div class="col-sm-4">
         <div class="btn-group" role="group" aria-label="...">
+          <%= link_to 'New', new_topic_resource_path(@topic), method: :get, class: 'btn btn-default' %>
           <%= link_to 'Edit', edit_resource_path(resource.id), method: :get, class: 'btn btn-default' %>
           <%= link_to 'Delete', resource_path(resource.id), method: :delete, data: { confirm: "#{pluralize(resource.comments.count, 'comment')} will also be deleted. Are you sure?" }, class: 'btn btn-default' %>
         </div>
