--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -3,7 +3,7 @@
 <!-- not sure why this won't work -->
 <%#= render 'resources' %>
 
-<h1>New <%= @topic.name %>-related Resource:</h1>
+<h1>New <%= @topic.name %>-related Link:</h1>
 
 <%= render 'form' %>
 
