--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -51,13 +51,13 @@
       <div class="panel-heading">
         <div class="row">
           <div class="col-sm-8">
-            <%= link_to resource.name, "#{resource.url}" %>
+            <h4><%= link_to resource.name, "#{resource.url}" %></h4>
           </div>
           <div class="col-sm-4">
-            <div class="btn-group" role="group" aria-label="...">
-              <button type="button" class="btn btn-default"><%= link_to 'Edit', edit_resource_path(resource.id) %></button>
-              <button type="button" class="btn btn-default"><%= link_to 'Delete', resource_path(resource.id), method: :delete, data: { confirm: 'Are you sure?' } %></button>
-            </div>
+          <div class="btn-group" role="group" aria-label="...">
+            <%= link_to 'Edit', edit_resource_path(resource.id), method: :get, class: 'btn btn-default' %>
+            <%= link_to 'Delete', resource_path(resource.id), method: :delete, data: { confirm: "#{pluralize(resource.comments.count, 'comment')} will also be deleted. Are you sure?" }, class: 'btn btn-default' %>
+          </div>
           </div>
         </div>
       </div>
@@ -69,13 +69,30 @@
             </div>
             <div class="col-sm-4">
               <div class="btn-group" role="group" aria-label="...">
-                <button type="button" class="btn btn-default"><%= link_to 'Edit', edit_comment_path(comment.id) %></button>
-                <button type="button" class="btn btn-default"><%= link_to 'Delete', comment_path(comment.id), method: :delete, data: { confirm: 'Are you sure?' } %></button>
-              </div>
+            <%= link_to 'Edit', edit_comment_path(comment.id), class: 'btn btn-default' %>
+            <%= link_to 'Delete', comment_path(comment.id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %>
+          </div>
             </div>
           </div>
         </div>
       <% end %>
+      <div class="panel-heading">
+        <div class="row">
+          <div class="col-sm-8">
+            <%= form_for([resource, resource.comments.new]) do |f| %>
+              <div class="field">
+                <%= f.label :message %>
+                <%= f.text_field :message %>
+              </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="actions">
+              <%= f.submit %>
+            </div>
+          <% end %>
+          </div>
+        </div>
+      </div>
     </div>
   <% end %>
   <a href="#" class="list-group-item"><%= link_to 'New Link', new_topic_resource_path(@topic) %></a>
