--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,16 @@
   <body>
 
   <div class="container">
-    <div class="page-header">
-      <h1>futuref <small>bookmark your programming links for future reference</small></h1>
+    <div class="col-xs-8">
+      <div class="page-header">
+        <h1>futuref <small>bookmark your programming links for future reference</small></h1>
+      </div>
     </div>
   </div>
 
   <div id="main-container" class="container">
     <div class="row">
-      <div class="col-xs-8">
+      <div class="col-sm-8">
         <%= render 'flash' %>
         <%#= render 'layouts/messages' %>
         <%= yield %>
