--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,7 +1,7 @@
-<%#= render 'topics' %>
+<%= render 'topics' %>
 
 <h3>New Topic</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', topics_path %>
+<%= link_to 'Back', :back %>
