fix and pass feature: list all comments

--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -33,7 +33,9 @@
         <div class="panel-body">
           <div class="row">
             <div class="col-sm-8">
-              <%= comment.message %>
+              <div class="comment">
+                <%= comment.message %>
+              </div>
             </div>
             <div class="col-sm-4">
               <div class="btn-group" role="group" aria-label="...">
