--- a/app/views/resources/_form.html.erb
+++ b/app/views/resources/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :url %><br>
-    <%= f.text_field :url %>
+    <%= f.url_field :url %>
   </div>
   <div class='actions'>
     <%= f.submit %>
